apps/libsync/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: libsync
  namespace: libsync
spec:
  replicas: 1
  selector:
    matchLabels:
      app: libsync
  template:
    metadata:
      labels:
        app: libsync
      annotations:
        reloader.stakater.com/auto: "true"
    spec:
      containers:
        - name: libsync
          image: amerenda/libsync-server:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 17200
          readinessProbe:
            httpGet:
              path: /healthcheck
              port: 17200
              httpHeaders:
                - name: Accept
                  value: application/vnd.koreader.v1+json
            initialDelaySeconds: 10
            periodSeconds: 15
          livenessProbe:
            httpGet:
              path: /healthcheck
              port: 17200
              httpHeaders:
                - name: Accept
                  value: application/vnd.koreader.v1+json
            initialDelaySeconds: 20
            periodSeconds: 30
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 256Mi
