apps/libsync/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: libsync-ingress
  namespace: libsync
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
    external-dns.alpha.kubernetes.io/hostname: libsync.amer.dev
    external-dns.alpha.kubernetes.io/ttl: "300"
spec:
  ingressClassName: infra-traefik
  tls:
    - hosts:
        - libsync.amer.dev
      secretName: libsync-amer-dev-tls
  rules:
    - host: libsync.amer.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: libsync
                port:
                  number: 17200
